--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -92,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2105, 282)\n",
-      "Exercise Transform Data(Tuple) Count: 2105\n"
+      "Raw Data Count(Exercises, Days): (2117, 284)\n",
+      "Exercise Transform Data(Tuple) Count: 2117\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 282\n"
+      "Exercise Days: 284\n"
      ]
     }
    ],
@@ -197,13 +197,13 @@
      "output_type": "stream",
      "text": [
       "('Arnold Press[Dumbbell]', 19)\n",
-      "('Assisted Dips[Machine]', 45)\n",
-      "('Assisted Pull-Up[Machine]', 60)\n",
-      "('Back Extension', 38)\n",
+      "('Assisted Dips[Machine]', 46)\n",
+      "('Assisted Pull-Up[Machine]', 61)\n",
+      "('Back Extension', 39)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Row[Barbell]', 9)\n",
+      "('Bent Over Row[Barbell]', 10)\n",
       "('Bent Over Row[Dumbbell]', 17)\n",
       "('Biceps Curls[Barbell]', 1)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
@@ -212,8 +212,8 @@
       "('Biceps Curls[Machine]', 13)\n",
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
-      "('Cable Cross-Over[Cable]', 5)\n",
-      "('Chest Fly[Pec Deck Machine]', 43)\n",
+      "('Cable Cross-Over[Cable]', 6)\n",
+      "('Chest Fly[Pec Deck Machine]', 44)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
       "('Deadlift[Barbell]', 90)\n",
@@ -222,7 +222,7 @@
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Dips', 18)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 60)\n",
+      "('Flat Bench Press[Barbell]', 61)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
@@ -243,7 +243,7 @@
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Incline Bench Press[Barbell]', 21)\n",
+      "('Incline Bench Press[Barbell]', 22)\n",
       "('Incline Bench Press[Dumbbell]', 19)\n",
       "('Incline Bench Press[Machine]', 35)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
@@ -251,9 +251,9 @@
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 103)\n",
+      "('Lat Pulldown[Machine]', 104)\n",
       "('Leg Extension[Machine]', 62)\n",
-      "('Long Pull Row[Cable]', 67)\n",
+      "('Long Pull Row[Cable]', 68)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 119)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
@@ -276,7 +276,7 @@
       "('Seated Chest Press[Machine]', 90)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 73)\n",
+      "('Seated Row[Machine]', 74)\n",
       "('Shoulder Press[Machine]', 83)\n",
       "('Side Lateral Raise[Dumbbell]', 68)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
@@ -287,7 +287,7 @@
       "('Split Squat[Smith Machine]', 9)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 47)\n",
+      "('Straight Arm Pulldown[Cable]', 48)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
@@ -333,114 +333,114 @@
      "output_type": "stream",
      "text": [
       "('Lying Leg Curls[Machine]', 119)\n",
+      "('Lat Pulldown[Machine]', 104)\n",
       "('Plank', 103)\n",
-      "('Lat Pulldown[Machine]', 103)\n",
-      "('Seated Chest Press[Machine]', 90)\n",
       "('Deadlift[Barbell]', 90)\n",
+      "('Seated Chest Press[Machine]', 90)\n",
       "('Shoulder Press[Machine]', 83)\n",
       "('Hip Abduction[Machine]', 82)\n",
       "('Hip Adduction[Machine]', 81)\n",
-      "('Seated Row[Machine]', 73)\n",
+      "('Seated Row[Machine]', 74)\n",
       "('Side Lateral Raise[Dumbbell]', 68)\n",
-      "('Long Pull Row[Cable]', 67)\n",
+      "('Long Pull Row[Cable]', 68)\n",
       "('Leg Extension[Machine]', 62)\n",
-      "('Flat Bench Press[Barbell]', 60)\n",
-      "('Assisted Pull-Up[Machine]', 60)\n",
+      "('Flat Bench Press[Barbell]', 61)\n",
+      "('Assisted Pull-Up[Machine]', 61)\n",
       "('Power Leg Press[Machine]', 58)\n",
-      "('Straight Arm Pulldown[Cable]', 47)\n",
+      "('Straight Arm Pulldown[Cable]', 48)\n",
       "('Running', 47)\n",
-      "('Assisted Dips[Machine]', 45)\n",
-      "('Chest Fly[Pec Deck Machine]', 43)\n",
-      "('Back Extension', 38)\n",
+      "('Assisted Dips[Machine]', 46)\n",
+      "('Chest Fly[Pec Deck Machine]', 44)\n",
+      "('Back Extension', 39)\n",
       "('One Leg Deadlift[Kettlebell]', 37)\n",
-      "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Incline Bench Press[Machine]', 35)\n",
+      "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
+      "('Incline Bench Press[Barbell]', 22)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 21)\n",
-      "('Incline Bench Press[Barbell]', 21)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Incline Bench Press[Dumbbell]', 19)\n",
       "('Arnold Press[Dumbbell]', 19)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Dips', 18)\n",
-      "('Goblet Squat[Kettlebell]', 17)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Bent Over Row[Dumbbell]', 17)\n",
+      "('Goblet Squat[Kettlebell]', 17)\n",
       "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Push-Up', 11)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Bent Over Row[Barbell]', 10)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
-      "('Hiit[Cycle]', 9)\n",
-      "('Upright Row[EZ Curl Bar]', 9)\n",
-      "('Bent Over Row[Barbell]', 9)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Split Squat[Smith Machine]', 9)\n",
       "('Military Press[Smith Machine]', 9)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
+      "('Hiit[Cycle]', 9)\n",
+      "('Upright Row[EZ Curl Bar]', 9)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
+      "('Cable Cross-Over[Cable]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Hip Thrust', 5)\n",
-      "('Cable Cross-Over[Cable]', 5)\n",
       "('Body-Weight Squat', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Hip Thrust', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 4)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 4)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Goblet Squat[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Walking', 2)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Walking', 2)\n",
       "('Dead Bug', 2)\n",
       "('Trx Row', 2)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Hip Abduction', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Full Squat[Barbell]', 1)\n",
       "('Biceps Curls[Barbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
       "('Trx Suspended Lunge', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n"
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n"
      ]
     }
    ],
