--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -1,9 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
    "source": [
-    "## Workout Analytics\n",
+    "        ## Workout Analytics\n",
     "#### 01. Aquisition with Crawling\n",
     "#### 02. Transformation with Cleansing, Denoising, Imputation and Normalization(using Exercise-Dictionary)\n",
     "#### 03. Exploring Basically"
@@ -11,13 +13,13 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import ssl\n",
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -86,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2141, 288)\n",
-      "Exercise Transform Data(Tuple) Count: 2141\n"
+      "Raw Data Count(Exercises, Days): (2147, 289)\n",
+      "Exercise Transform Data(Tuple) Count: 2147\n"
      ]
     }
    ],
@@ -166,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 288\n"
+      "Exercise Days: 289\n"
      ]
     }
    ],
@@ -190,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Arnold Press[Dumbbell]', 20)\n",
+      "('Arnold Press[Dumbbell]', 21)\n",
       "('Assisted Dips[Machine]', 47)\n",
       "('Assisted Pull-Up[Machine]', 62)\n",
       "('Back Extension', 40)\n",
@@ -257,7 +259,7 @@
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 120)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 10)\n",
+      "('Military Press[Smith Machine]', 11)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
@@ -270,15 +272,15 @@
       "('Push-Up', 11)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 22)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 23)\n",
       "('Running', 47)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 5)\n",
       "('Seated Chest Press[Machine]', 90)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 75)\n",
-      "('Shoulder Press[Machine]', 83)\n",
-      "('Side Lateral Raise[Dumbbell]', 69)\n",
+      "('Shoulder Press[Machine]', 84)\n",
+      "('Side Lateral Raise[Dumbbell]', 70)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -296,7 +298,7 @@
       "('Trx Lunge', 1)\n",
       "('Trx Row', 2)\n",
       "('Trx Suspended Lunge', 1)\n",
-      "('Upright Row[EZ Curl Bar]', 10)\n",
+      "('Upright Row[EZ Curl Bar]', 11)\n",
       "('Vipr Ice Skater', 1)\n",
       "('Vipr Lateral Shuffle', 1)\n",
       "('Vipr Overhead Squat', 1)\n",
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -337,36 +339,36 @@
       "('Plank', 104)\n",
       "('Deadlift[Barbell]', 91)\n",
       "('Seated Chest Press[Machine]', 90)\n",
+      "('Shoulder Press[Machine]', 84)\n",
       "('Hip Abduction[Machine]', 83)\n",
-      "('Shoulder Press[Machine]', 83)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Seated Row[Machine]', 75)\n",
-      "('Side Lateral Raise[Dumbbell]', 69)\n",
+      "('Side Lateral Raise[Dumbbell]', 70)\n",
       "('Long Pull Row[Cable]', 69)\n",
       "('Assisted Pull-Up[Machine]', 62)\n",
       "('Flat Bench Press[Barbell]', 62)\n",
       "('Leg Extension[Machine]', 62)\n",
       "('Power Leg Press[Machine]', 59)\n",
       "('Straight Arm Pulldown[Cable]', 48)\n",
-      "('Assisted Dips[Machine]', 47)\n",
       "('Running', 47)\n",
+      "('Assisted Dips[Machine]', 47)\n",
       "('Chest Fly[Pec Deck Machine]', 45)\n",
       "('Back Extension', 40)\n",
       "('One Leg Deadlift[Kettlebell]', 37)\n",
-      "('Incline Bench Press[Machine]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Incline Bench Press[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 23)\n",
       "('Incline Bench Press[Barbell]', 23)\n",
       "('Wrist Roller', 22)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 22)\n",
-      "('Arnold Press[Dumbbell]', 20)\n",
+      "('Arnold Press[Dumbbell]', 21)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Incline Bench Press[Dumbbell]', 20)\n",
-      "('Dips', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Bent Over Row[Dumbbell]', 17)\n",
+      "('Dips', 18)\n",
       "('Goblet Squat[Kettlebell]', 17)\n",
+      "('Bent Over Row[Dumbbell]', 17)\n",
       "('Hip Bridge', 15)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
@@ -374,73 +376,73 @@
       "('Deadlift[Kettlebell]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
-      "('Bent Over Row[Barbell]', 11)\n",
       "('Push-Up', 11)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
-      "('Split Squat[Smith Machine]', 10)\n",
-      "('Upright Row[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 10)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Upright Row[EZ Curl Bar]', 11)\n",
+      "('Bent Over Row[Barbell]', 11)\n",
+      "('Military Press[Smith Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
+      "('Split Squat[Smith Machine]', 10)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
       "('Split Squat[Kettlebell]', 7)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Cable Cross-Over[Cable]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Hip Thrust', 5)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 5)\n",
       "('Body-Weight Squat', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 5)\n",
+      "('Hip Thrust', 5)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Walking', 2)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Dead Bug', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
       "('Trx Row', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Walking', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Dead Bug', 2)\n",
       "('Trx Lunge', 1)\n",
       "('Vipr Overhead Squat', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n"
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n"
      ]
     }
    ],
