--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -339,14 +339,14 @@
       "('Plank', 104)\n",
       "('Deadlift[Barbell]', 92)\n",
       "('Seated Chest Press[Machine]', 90)\n",
-      "('Hip Abduction[Machine]', 84)\n",
       "('Shoulder Press[Machine]', 84)\n",
+      "('Hip Abduction[Machine]', 84)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Seated Row[Machine]', 76)\n",
       "('Side Lateral Raise[Dumbbell]', 70)\n",
       "('Long Pull Row[Cable]', 69)\n",
-      "('Flat Bench Press[Barbell]', 63)\n",
       "('Assisted Pull-Up[Machine]', 63)\n",
+      "('Flat Bench Press[Barbell]', 63)\n",
       "('Leg Extension[Machine]', 62)\n",
       "('Power Leg Press[Machine]', 60)\n",
       "('Straight Arm Pulldown[Cable]', 49)\n",
@@ -362,87 +362,87 @@
       "('Incline Bench Press[Barbell]', 24)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 23)\n",
       "('Wrist Roller', 22)\n",
-      "('Incline Bench Press[Dumbbell]', 21)\n",
       "('Arnold Press[Dumbbell]', 21)\n",
+      "('Incline Bench Press[Dumbbell]', 21)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "('Dips', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Dips', 18)\n",
       "('Bent Over Row[Dumbbell]', 17)\n",
       "('Hip Bridge', 15)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Bent Over Row[Barbell]', 12)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
       "('Pull-Up', 12)\n",
-      "('Push-Up', 11)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Bent Over Row[Barbell]', 12)\n",
       "('Upright Row[EZ Curl Bar]', 11)\n",
-      "('Split Squat[Smith Machine]', 11)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
       "('Military Press[Smith Machine]', 11)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Push-Up', 11)\n",
+      "('Split Squat[Smith Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Cable Cross-Over[Cable]', 7)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Squat[Dumbbell]', 5)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 5)\n",
-      "('Body-Weight Squat', 5)\n",
       "('Hip Thrust', 5)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
       "('Reverse Crunch', 4)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Dead Bug', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Walking', 2)\n",
       "('Full Squat[Barbell]', 2)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Walking', 2)\n",
+      "('Trx Row', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
       "('Vipr Ice Skater', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
       "('Trx Suspended Lunge', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
       "('Trx Lunge', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Hip Abduction', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
       "('Cross Lunges', 1)\n",
-      "('Vipr Overhead Squat', 1)\n"
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n"
      ]
     }
    ],
