--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import ssl\n",
@@ -52,15 +52,22 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loding Exercise Dictionary Pickle[/Users/kickscar/DoWork/PycharmProjects/HELLCHANG-PRACTICES/datasets/pickles/exercise-dict.pkl]\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import os\n",
@@ -75,15 +82,23 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw Data Count(Exercises, Days): (2240, 305)\n",
+      "Exercise Transform Data(Tuple) Count: 2240\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from datetime import datetime\n",
@@ -147,15 +162,22 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exercise Days: 305\n"
+     ]
+    }
+   ],
    "source": [
     "# 03. Exploring1: How Exercise Days?\n",
     "days = list(set([t[0] for t in restransform]))\n",
@@ -164,15 +186,130 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Arnold Press[Dumbbell]', 25)\n",
+      "('Assisted Dips[Machine]', 52)\n",
+      "('Assisted Pull-Up[Machine]', 66)\n",
+      "('Back Extension', 41)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Bent Over Row[Barbell]', 15)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Machine]', 13)\n",
+      "('Body-Weight Squat', 5)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Cable Cross-Over[Cable]', 8)\n",
+      "('Chest Fly[Pec Deck Machine]', 50)\n",
+      "('Cross Lunges', 1)\n",
+      "('Dead Bug', 2)\n",
+      "('Deadlift[Barbell]', 95)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
+      "('Dips', 18)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Flat Bench Press[Barbell]', 66)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Goblet Squat[Kettlebell]', 18)\n",
+      "('Hack Squat[Machine]', 6)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "('Hiit[Cycle]', 9)\n",
+      "('Hip Abduction', 1)\n",
+      "('Hip Abduction[Machine]', 86)\n",
+      "('Hip Adduction[Machine]', 81)\n",
+      "('Hip Bridge', 15)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Hip Thrust', 5)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Incline Bench Press[Barbell]', 27)\n",
+      "('Incline Bench Press[Dumbbell]', 25)\n",
+      "('Incline Bench Press[Machine]', 35)\n",
+      "('Incline Bench Press[Smith Machine]', 26)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Lat Pulldown[Machine]', 109)\n",
+      "('Leg Extension[Machine]', 63)\n",
+      "('Long Pull Row[Cable]', 71)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Lying Leg Curls[Machine]', 122)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Military Press[Smith Machine]', 15)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('One Leg Deadlift[Kettlebell]', 38)\n",
+      "('Plank', 104)\n",
+      "('Power Leg Press[Machine]', 63)\n",
+      "('Pull-Up', 12)\n",
+      "('Push-Up', 11)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Reverse Crunch', 4)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 27)\n",
+      "('Running', 47)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
+      "('Seated Chest Press[Machine]', 90)\n",
+      "('Seated Leg Press[Machine]', 14)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Seated Row[Machine]', 79)\n",
+      "('Shoulder Press[Machine]', 86)\n",
+      "('Side Lateral Raise[Dumbbell]', 74)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Side-Lying Hip Abduction', 32)\n",
+      "('Split Squat', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
+      "('Split Squat[Smith Machine]', 13)\n",
+      "('Squat[Dumbbell]', 5)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Straight Arm Pulldown[Cable]', 52)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
+      "('Trx Lunge', 1)\n",
+      "('Trx Row', 2)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Upright Row[EZ Curl Bar]', 15)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Walking', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Wrist Roller', 22)\n"
+     ]
+    }
+   ],
    "source": [
     "# 03. Exploring2: Which Exercises?\n",
     "exs = [t[1] for t in restransform]\n",
@@ -185,15 +322,130 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Lying Leg Curls[Machine]', 122)\n",
+      "('Lat Pulldown[Machine]', 109)\n",
+      "('Plank', 104)\n",
+      "('Deadlift[Barbell]', 95)\n",
+      "('Seated Chest Press[Machine]', 90)\n",
+      "('Hip Abduction[Machine]', 86)\n",
+      "('Shoulder Press[Machine]', 86)\n",
+      "('Hip Adduction[Machine]', 81)\n",
+      "('Seated Row[Machine]', 79)\n",
+      "('Side Lateral Raise[Dumbbell]', 74)\n",
+      "('Long Pull Row[Cable]', 71)\n",
+      "('Assisted Pull-Up[Machine]', 66)\n",
+      "('Flat Bench Press[Barbell]', 66)\n",
+      "('Leg Extension[Machine]', 63)\n",
+      "('Power Leg Press[Machine]', 63)\n",
+      "('Straight Arm Pulldown[Cable]', 52)\n",
+      "('Assisted Dips[Machine]', 52)\n",
+      "('Chest Fly[Pec Deck Machine]', 50)\n",
+      "('Running', 47)\n",
+      "('Back Extension', 41)\n",
+      "('One Leg Deadlift[Kettlebell]', 38)\n",
+      "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Incline Bench Press[Machine]', 35)\n",
+      "('Side-Lying Hip Abduction', 32)\n",
+      "('Incline Bench Press[Barbell]', 27)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 27)\n",
+      "('Incline Bench Press[Smith Machine]', 26)\n",
+      "('Arnold Press[Dumbbell]', 25)\n",
+      "('Incline Bench Press[Dumbbell]', 25)\n",
+      "('Wrist Roller', 22)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Goblet Squat[Kettlebell]', 18)\n",
+      "('Dips', 18)\n",
+      "('Upright Row[EZ Curl Bar]', 15)\n",
+      "('Military Press[Smith Machine]', 15)\n",
+      "('Bent Over Row[Barbell]', 15)\n",
+      "('Hip Bridge', 15)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
+      "('Seated Leg Press[Machine]', 14)\n",
+      "('Biceps Curls[Machine]', 13)\n",
+      "('Split Squat[Smith Machine]', 13)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Pull-Up', 12)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Push-Up', 11)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Hiit[Cycle]', 9)\n",
+      "('Cable Cross-Over[Cable]', 8)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('Hack Squat[Machine]', 6)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
+      "('Body-Weight Squat', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('Reverse Crunch', 4)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Walking', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Trx Lunge', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# 03. Exploring3: and How Often?\n",
     "sorted_by_count = sorted(dataset_exs, key=lambda t: t[1], reverse=True)\n",
@@ -203,8 +455,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
